[gd_scene load_steps=6 format=3 uid="uid://loading_scene"]

[ext_resource type="Script" path="res://scripts/loading.gd" id="1"]
[ext_resource type="FontFile" path="res://fonts/RacingFont.otf" id="2"]

[sub_resource type="StyleBoxFlat" id="bar_bg"]
bg_color = Color(0.12, 0.12, 0.16, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.35, 0.6)

[sub_resource type="StyleBoxFlat" id="bar_fill"]
bg_color = Color(0.9, 0.25, 0.1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="bar_fill_over"]
bg_color = Color(0.9, 0.25, 0.1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Loading" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.06, 0.09, 1)

[node name="StripeTop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 5.0
grow_horizontal = 2
color = Color(0.9, 0.25, 0.1, 1)

[node name="StripeBottom" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
grow_horizontal = 2
color = Color(0.9, 0.25, 0.1, 1)

[node name="SpeedParticles" type="CPUParticles2D" parent="."]
position = Vector2(1152, 324)
amount = 30
lifetime = 2.0
speed_scale = 1.5
emission_shape = 3
emission_rect_extents = Vector2(50, 400)
direction = Vector2(-1, 0)
spread = 3.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 600.0
scale_amount_min = 1.0
scale_amount_max = 4.0
color = Color(0.9, 0.25, 0.1, 0.08)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TitleSmall" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.45, 0.6)
theme_override_font_sizes/font_size = 16
theme_override_fonts/font = ExtResource("2")
text = "COFFEE TIME"
horizontal_alignment = 1

[node name="LoadingLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.9, 0.15, 0.05, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
theme_override_fonts/font = ExtResource("2")
text = "CHARGEMENT..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(450, 14)
size_flags_horizontal = 4
max_value = 100.0
value = 0.0
show_percentage = false
theme_override_styles/background = SubResource("bar_bg")
theme_override_styles/fill = SubResource("bar_fill")

[node name="PercentLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.1, 1)
theme_override_font_sizes/font_size = 18
theme_override_fonts/font = ExtResource("2")
text = "0%"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="TipLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 0.7)
theme_override_font_sizes/font_size = 14
theme_override_fonts/font = ExtResource("2")
text = "MEMORISEZ LA CARTE POUR ALLER PLUS VITE"
horizontal_alignment = 1
autowrap_mode = 2
